--- a/style.css
+++ b/style.css
@@ -1,3 +1,17 @@
 .nav-text {
     width: 790px;
 }
+
+.box {
+    height: 240px;
+}
+
+a {
+    text-decoration: none !important;
+    color: #000 !important;
+    margin: 0 0 0 190px;
+}
+
+span {
+    color: blue;
+}
