--- a/style.css
+++ b/style.css
@@ -6,6 +6,10 @@
     height: 240px;
 }
 
+.nav-link {
+    color: #fff !important;
+}
+
 a {
     text-decoration: none !important;
     color: #000 !important;
